--- a/bookshop-webapp/src/App.css
+++ b/bookshop-webapp/src/App.css
@@ -1,38 +1,11 @@
-.App {
-  text-align: center;
+:root {
+  --primary-pink: #fb7185;
+  --light-grey: #F8FAFC;
+  --light-grey-2: #F1F5F9;
+  --dark-blue: #0F172A;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  height: 100vh;
+  background-color: var(--dark-blue);
 }
